Initial work on simple upload api and job in analyzer for import. Not complete
